# fluxclient

./: .gitignore  MANIFEST.in  Makefile  README.md  conftest.ini.example  conftest.py  pcl_setup.py  requirements.txt  sdk_connection.pem  sdk_connection_huh.pem  setup.py  setup_utils.py  test_boost.sh
doc/: Makefile  make.bat
doc/source/: Document.rst  Installation.rst  Tutorial.rst  conf.py  index.rst  installation.rst
fluxclient/: __init__.py  console.py  encryptor.py  misc.py  robot.py  robot_console.py  robot_misc.py  upnp_base.py  upnp_discover.py  upnp_task.py
fluxclient/commands/: auth.py  camera.py  config_network.py  discover.py  experiment_tool.py  fcode.py  laser.py  laser_patten.py  manager.py  misc.py  passwd.py  robot.py  scan.py  toolpath.py  upnp.py  usb.py
fluxclient/device/: __init__.py  device.py  discover.py  host2host_usb.py  manager.py  misc.py
fluxclient/fcode/: f_to_g.py  fcode_base.py  g_to_f.py
fluxclient/hw_profile/: __init__.py
fluxclient/laser/: LOGO.py  __init__.py  laser_base.py  laser_bitmap.py  laser_middleware.py  laser_svg.py  pen_draw.py  pen_svg.py  tools.py
fluxclient/printer/: __init__.py  flux_raft.py  hide.AppleScript  stl_slicer.py
resources/: fd1p.def.json  fdmextruder.def.json  fdmprinter.def.json
src/scanner/PoissonRecon/Src/: Array.h  BSplineData.inl  CMakeLists.txt  Geometry.h  MultiGridOctreeData.IsoSurface.inl  MultiGridOctreeData.h  MultiGridOctreeData.inl  Octree.h  Ply.h  PointStream.h  Polynomial.inl  SparseMatrix.inl  SurfaceTrimmer.cpp
tests/: main.py  real_device.py  unit-test.sh
(+184 files in other folders)
